S e optimiza el patron state, se implementa ewl cambio automatico de estado del repartidor